Add combined check script and update documentation
- Add npm run check script that runs both lint and type-check
- Keep individual lint and type-check scripts for flexibility
- Update copilot instructions to use check script in workflow
- Update README to document code quality scripts
- Mark TODO item as completed

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "type-check": "tsc --noEmit",
     "lint": "eslint .",
+    "check": "npm run lint && npm run type-check",
     "preview": "vite preview",
     "test:watch": "vitest",
     "test": "vitest run",
