Fix Beer-Lambert compositing physics and improve server management
- Fix Beer-Lambert compositing to use white light for viewing instead of original color
  - Remove originalColor parameter from applyBeerLambertCompositing()
  - Update method to use white light (255) for physically accurate film simulation
  - Update tests to verify correct white light behavior
  - Mark TODO item as completed with detailed explanation

- Add safe development server management
  - Create scripts/stop-dev-server.js with proper documentation and error handling
  - Add npm scripts: dev:stop and dev:restart for safe server management
  - Target only Vite ports (5173, 5174) to avoid killing other processes
  - Update README.md with development scripts documentation
  - Update coding instructions with safer server management approach

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:stop": "node scripts/stop-dev-server.js",
+    "dev:restart": "npm run dev:stop && npm run dev",
     "build": "vite build",
     "type-check": "tsc --noEmit",
     "lint": "eslint .",
