Streamline profiling workflow and update ignore rules
- Added comprehensive documentation for scripts and profiling tools
- Updated .gitignore to ignore all profiling output and debug files, with clear structure
- Simplified npm profiling scripts in package.json for unified usage
- Marked flamegraph profiling TODO as complete

No files from scripts/profiling/output are tracked or committed.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ test/temp/
 temp_*
 debug_*
 public/debug/
+
+# Profiling output files
+scripts/profiling/output/
+!scripts/profiling/output/README.md
+isolate-*.log
+scripts/profiling/output/v8-profile-*.txt
+isolate-*.log
