Add devAssert macro for development-only assertions and update profiling scripts for production mode
- Implement devAssert as a compile-time macro in src/utils.ts, ensuring zero runtime cost in production and full assertion checking in development
- Update profiling scripts (simple_profiler.ts, flamegraph_profiler.ts, profile_hotspots.sh) to set NODE_ENV=production for accurate performance measurement and to eliminate dev-only checks
- Refactor npm scripts in package.json to run profiling in production mode
- Clean up script comments and improve messaging for profiling runs

This change ensures expensive assertions are only run in development and never impact production performance or profiling results.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "test": "vitest run",
     "test:ui": "vitest --ui",
     "benchmark": "vitest run --config vitest.benchmark.config.ts",
-    "profile": "npx tsx scripts/profiling/flamegraph_profiler.ts",
-    "profile:comprehensive": "scripts/profiling/profile_hotspots.sh"
+    "profile:flamegraph": "NODE_ENV=production npx tsx scripts/profiling/flamegraph_profiler.ts",
+    "profile:simple": "NODE_ENV=production npx tsx scripts/profiling/simple_profiler.ts",
+    "profile:hotspots": "NODE_ENV=production scripts/profiling/profile_hotspots.sh",
+    "profile": "npm run profile:flamegraph"
   },
   "dependencies": {
     "react": "^19.1.0",
