Add test for directional patterns in grain processing
- Add comprehensive test that loads gray.png and processes it with GrainProcessor
- Implement directional bias analysis using horizontal/vertical strip variations
- Add diagonal stripe pattern detection (1:4 pixel slope analysis)
- Test correctly detects existing directional artifacts in algorithm
- Results: anisotropy ratio 1.32 confirms systematic bias issue
- Add Sharp dependency for PNG loading in Node.js tests
- Include helper functions for image loading, resizing, and pattern analysis
- Test fails as expected, validating the presence of stripe patterns
- Completes TODO item: grain processing directional pattern validation

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^24.0.14",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/sharp": "^0.31.1",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
     "@vitejs/plugin-react": "^4.5.2",
@@ -42,6 +43,7 @@
     "globals": "^16.2.0",
     "jsdom": "^26.1.0",
     "prettier": "^3.6.2",
+    "sharp": "^0.34.3",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vite": "^7.0.0",
