--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "find-process": "^2.0.0",
+    "fkill-cli": "^8.0.0",
     "gh-pages": "^6.3.0",
     "globals": "^16.2.0",
     "jsdom": "^26.1.0",
